src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Accounting__c</fullName>
        <label>Accounting</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Administrative__c</fullName>
        <label>Administrative</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age1__c</fullName>
        <formula>IF( NOT( ISBLANK(Date_of_Birth__c) ) , 
IF( DATE( 2000 , MONTH( Date_of_Birth__c ) , DAY( Date_of_Birth__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ), 
YEAR (Today()) - YEAR (Date_of_Birth__c), 
YEAR (Today()) - YEAR ( Date_of_Birth__c ) -1 ), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <inlineHelpText>Enter the Annual Income for this person.</inlineHelpText>
        <label>Annual Income</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apprentice__c</fullName>
        <label>Apprentice</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attended_AA__c</fullName>
        <label>Attended AA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeping__c</fullName>
        <label>Bookkeeping</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carpenter__c</fullName>
        <label>Carpenter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cashier__c</fullName>
        <label>Cashier</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certification_Date__c</fullName>
        <label>Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Expiration_Date__c</fullName>
        <formula>Date(Year( Certification_Date__c ) + 3, Month(Certification_Date__c), Day(Certification_Date__c) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certification Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Number__c</fullName>
        <label>Certification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Reminder_Sent__c</fullName>
        <label>Certification Reminder Sent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_on_why_they_contacted_us__c</fullName>
        <label>Comment on why they contacted us.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Computer_Programming__c</fullName>
        <label>Computer Programming</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Computer_Skills_Advanced__c</fullName>
        <label>Computer Skills Advanced</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Computer_Skills</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Computer_Skills_Beginner__c</fullName>
        <label>Computer Skills Beginner</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Computer_Skills</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Computer_Skills_Intermediate__c</fullName>
        <label>Computer Skills Intermediate</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Computer_Skills</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Construction_Laborer__c</fullName>
        <label>Construction Laborer</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Method_Used__c</fullName>
        <label>Contact Method Used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Record_Type_RPT__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Record Type RPT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Manager</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>Community Global User</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Housing Finance Manager</fullName>
                </value>
                <value>
                    <fullName>Inspector</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
                <value>
                    <fullName>On-Site Manager</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Property Manager</fullName>
                </value>
                <value>
                    <fullName>Rehab HC Specialist</fullName>
                </value>
                <value>
                    <fullName>Resident Manager</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Housing First - Housing Our Heroes</fullName>
                </value>
                <value>
                    <fullName>Landlord/Owner</fullName>
                </value>
                <value>
                    <fullName>Case Manager</fullName>
                </value>
                <value>
                    <fullName>Community Member</fullName>
                </value>
                <value>
                    <fullName>Housing Specialist</fullName>
                </value>
                <value>
                    <fullName>Section 3 Resident</fullName>
                </value>
                <value>
                    <fullName>Primary Business Contact</fullName>
                </value>
                <value>
                    <fullName>Business Sales Contact</fullName>
                </value>
                <value>
                    <fullName>Business Admin Contact</fullName>
                </value>
                <value>
                    <fullName>Office Manager</fullName>
                </value>
                <value>
                    <fullName>Payroll Contact</fullName>
                </value>
                <value>
                    <fullName>Co-Owner</fullName>
                </value>
                <value>
                    <fullName>Housing First Client_FY18</fullName>
                </value>
                <value>
                    <fullName>Housing First Client - FY17</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Project_Hired_For__c</fullName>
        <label>Contract/Project Hired For?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counceling__c</fullName>
        <label>Counceling</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Applications__c</fullName>
        <label>Count of Applications</label>
        <summaryForeignKey>Applications__c.Applicant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <label>Currently Employed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Currently Employed</fullName>
                </value>
                <value>
                    <fullName>Part Time Employment</fullName>
                </value>
                <value>
                    <fullName>Full Time Employment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Contacted_SDHC__c</fullName>
        <label>Date Contacted SDHC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disabled__c</fullName>
        <label>Disabled</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_not_Have__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Have</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drivers_License__c</fullName>
        <label>Drivers License</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drug_Screen__c</fullName>
        <label>Drug Screen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education_History__c</fullName>
        <label>Education History</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>GED</fullName>
                </value>
                <value>
                    <fullName>HE</fullName>
                </value>
                <value>
                    <fullName>HS</fullName>
                </value>
                <value>
                    <fullName>HSD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>PhD</fullName>
                </value>
                <value>
                    <fullName>PHS</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>TC</fullName>
                </value>
                <value>
                    <fullName>TTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrician__c</fullName>
        <label>Electrician</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ethnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_10__c</fullName>
        <label>Field 10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gardener_Landscaper__c</fullName>
        <label>Gardener/Landscaper</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HF_Leased_to_a_Housing_first_Client__c</fullName>
        <description>Hidden Field to get a value if the Unit Placement contains a date</description>
        <label>HF-Leased to a Housing first Client</label>
        <summarizedField>Unit_Placement__c.Lease_Up_Date__c</summarizedField>
        <summaryForeignKey>Unit_Placement__c.Tenant__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_a_Felony_Record__c</fullName>
        <label>Has a Felony Record</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hired_By_Contractor__c</fullName>
        <label>Hired By Contractor</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hired_Date__c</fullName>
        <label>Hired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hired__c</fullName>
        <label>Hired?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Homeless__c</fullName>
        <inlineHelpText>Is this person currently homeless?</inlineHelpText>
        <label>Homeless?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_ID__c</fullName>
        <inlineHelpText>Please enter the HMIS Number here.</inlineHelpText>
        <label>Household ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_This__c</fullName>
        <inlineHelpText>How did this person hear about the SDHC services they are calling about?</inlineHelpText>
        <label>How Did You Hear About This?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Support__c</fullName>
        <label>IT Support</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Insurance</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <label>Is Selected</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Janitorial_Cleaning__c</fullName>
        <label>Janitorial/Cleaning</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages_Spoken__c</fullName>
        <label>Languages Spoken</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leased_to_a_Housing_first_Client__c</fullName>
        <formula>IF( HF_Leased_to_a_Housing_first_Client__c &gt;  TODAY() , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leased to a Housing first Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lifting_Requirement__c</fullName>
        <label>Lifting Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Machine_Operation__c</fullName>
        <label>Machine Operation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance__c</fullName>
        <label>Maintenance</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Management__c</fullName>
        <label>Management</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mechanic__c</fullName>
        <label>Mechanic</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medical_Assistance__c</fullName>
        <label>Medical Assistance</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metal_Worker__c</fullName>
        <label>Metal Worker</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Discharge_Status__c</fullName>
        <label>Military Discharge Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Military_Discharge_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NOFA__c</fullName>
        <label>NOFA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1,000 Vets NOFA - SBS</fullName>
                </value>
                <value>
                    <fullName>1,000 Vets NOFA - RRH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_5__c</fullName>
        <label>Name 5</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_in_Household__c</fullName>
        <label>Number in Household</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Adults_in_Household__c</fullName>
        <label>Number of Adults in Household</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Children_in_Household__c</fullName>
        <label>Number of Children in Household</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Education_Info__c</fullName>
        <label>Other Education Info</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Work_Expertice__c</fullName>
        <label>Other Work Expertice</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_18_Years_Of_Age__c</fullName>
        <label>Over 18 Years Of Age</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Painter__c</fullName>
        <label>Painter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paperless_Email_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paperless/Email only:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Plumber__c</fullName>
        <label>Plumber</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prevention_Score__c</fullName>
        <label>Prevention Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Printing_Trades__c</fullName>
        <label>Printing Trades</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Code__c</fullName>
        <label>Property Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Owner_Associations__c</fullName>
        <inlineHelpText>For LandLords Only, please list any Property or Owner Associations you are a member of.</inlineHelpText>
        <label>Property/Owner Associations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_Number_YARDI__c</fullName>
        <label>Prospect Number(YARDI)</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RAD_Homeless__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homeless</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RAD_Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Race</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_Estate__c</fullName>
        <label>Real Estate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_SDHC_Achievement_Academy_Assist__c</fullName>
        <label>Received SDHC Achievement Academy Assist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <inlineHelpText>Date Referral was received by Housing First Team</inlineHelpText>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Of_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release Of Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_City__c</fullName>
        <label>Residential City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_State__c</fullName>
        <label>Residential State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Street__c</fullName>
        <label>Residential Street</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Zipcode__c</fullName>
        <label>Residential Zipcode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume_On_file__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resume On file</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDHC_Community_Relationship__c</fullName>
        <inlineHelpText>Please select the Community that this contact is generally associated with.</inlineHelpText>
        <label>SDHC Program Affiliation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SDHC_Community_Relationships</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SNN_DUP__c</fullName>
        <description>Required for Username Validation</description>
        <label>SNN_DUP</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN_TaxID__c</fullName>
        <label>SSN / TaxID</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Sales_Clerk__c</fullName>
        <label>Sales Clerk</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sandiago_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sandiago_checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_3_Eligibility__c</fullName>
        <label>Section 3 Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Income</fullName>
                </value>
                <value>
                    <fullName>Section 8</fullName>
                </value>
                <value>
                    <fullName>Public Housing Resident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Answer_1__c</fullName>
        <label>Security_Answer_1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Answer_2__c</fullName>
        <label>Security_Answer_2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Answer_3__c</fullName>
        <label>Security_Answer_3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Question_1__c</fullName>
        <label>Security_Question_1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Which is your favorite Color?</fullName>
                </value>
                <value>
                    <fullName>What is the name of your childhood friend?</fullName>
                </value>
                <value>
                    <fullName>What was the brand of your first car?</fullName>
                </value>
                <value>
                    <fullName>In which city you were born?</fullName>
                </value>
                <value>
                    <fullName>What is the name of your first pet?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Question_2__c</fullName>
        <label>Security_Question_2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Which is your favorite Color?</fullName>
                </value>
                <value>
                    <fullName>What is the name of your childhood friend?</fullName>
                </value>
                <value>
                    <fullName>What was the brand of your first car?</fullName>
                </value>
                <value>
                    <fullName>In which city you were born?</fullName>
                </value>
                <value>
                    <fullName>What is the name of your first pet?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Question_3__c</fullName>
        <label>Security_Question_3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Which is your favorite Color?</fullName>
                </value>
                <value>
                    <fullName>What is the name of your childhood friend?</fullName>
                </value>
                <value>
                    <fullName>What was the brand of your first car?</fullName>
                </value>
                <value>
                    <fullName>In which city you were born?</fullName>
                </value>
                <value>
                    <fullName>What is the name of your first pet?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seeking_Employment__c</fullName>
        <label>Seeking Employment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
</CustomObject>